feat: tweemoji support

--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -37,7 +38,6 @@
     </header>
     <main class="mdc-top-app-bar--fixed-adjust">
       <!--Tabs-->
-
       <div id="Menu" class="footer mdc-tab-bar show" role="tablist">
         <div class="mdc-tab-scroller">
           <div
