feat: Tab perfil

--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -285,9 +285,31 @@ donde se mostrara de forma dinamica con js los elementos
           Resultados
           <div class="containerResultados"></div>
         </section>
-        <section id="Grupo" class="hide">Grupo</section>
-        <section id="Canje" class="hide">Canje</section>
-        <section id="Perfil" class="hide">Perfil</section>
+        <section id="Grupo" class="hide">Grupo
+          <div class="containerGrupo"></div>
+        </section>
+        <section id="Canje" class="hide">Canje
+          <div class="containerCanje"></div>
+        </section>
+
+        <section id="Perfil" class="hide">
+          <div class="containerPerfil"></div>
+
+         <!-- <div class="mdc-card mdc-card--outlined">
+            <div class="mdc-card-wrapper__text-section">
+              <div class="demo-card__subhead">Actualmente tienes:</div>
+
+              <div  class="mdc-card mdc-card--outlined">
+                  <div id="zonaPuntaje" class="demo-card__title"> 100</div>
+              </div>
+
+              <div class="demo-card__subhead">Puntos</div>
+            </div>-->
+          
+
+            
+          </div>
+        </section>
 
         <section id="IngresoPrediccion" class="hide">
           IngresoPrediccion
