--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -220,13 +220,17 @@ donde se mostrara de forma dinamica con js los elementos
         </h1>
         <div class="containerResultados"></div>
       </section>
-      <section id="Grupo" class="hide">Grupo
+      <section id="Grupo" class="hide">
+        <h1>Grupo</h1>
+
         <div class="containerGrupo"></div>
       </section>
-      <section id="Canje" class="hide">Canje
+      <section id="Canje" class="hide">
+        <h1>
+          Canje
+        </h1>
         <div class="containerCanje"></div>
       </section>
-
       <section id="Perfil" class="hide">
         <div class="containerPerfil"></div>
 
