style: card perfil

--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -232,7 +232,11 @@ donde se mostrara de forma dinamica con js los elementos
         <div class="containerCanje"></div>
       </section>
       <section id="Perfil" class="hide">
+        <h1>
+          Perfil
+        </h1>
         <div class="containerPerfil"></div>
+
 
         <!-- <div class="mdc-card mdc-card--outlined">
             <div class="mdc-card-wrapper__text-section">
